--- a/src/CardDisplay.css
+++ b/src/CardDisplay.css
@@ -1,6 +1,6 @@
 .card {
   background-color: #fafafa;
-  border: 1px solid #000;
+  border: 1px solid #000000;
   border-radius: .25em;
   display: inline-block;
   font-family: Arial, Helvetica, sans-serif;
@@ -14,12 +14,12 @@
 
 .card.clubs,
 .card.spades {
-  color: #000;
+  color: #000000;
 }
 
 .card.diamonds,
 .card.hearts {
-  color: #f00;
+  color: #ff0000;
 }
 
 .card .rank,
